new swagger config1.5.11
